--- a/index.html
+++ b/index.html
@@ -6,6 +6,35 @@
     <title>Restaurant Website</title>
 </head>
 <body>
+         <!-- Navbar Section Starts Here -->
+         <section class="navbar">
+            <div class="container">
+                <div class="logo">
+                    <a href="#" title="Logo">
+                        <img src="images/logo.png" alt="Restaurant Logo" class="img-responsive">
+                    </a>
+                </div>
     
+                <div class="menu text-right">
+                    <ul>
+                        <li>
+                            <a href="index.html">Home</a>
+                        </li>
+                        <li>
+                            <a href="#">Categories</a>
+                        </li>
+                        <li>
+                            <a href="#">Foods</a>
+                        </li>
+                        <li>
+                            <a href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+    
+                <div class="clearfix"></div>
+            </div>
+        </section>
+        <!-- Navbar Section Ends Here -->
 </body>
 </html>
