--- a/index.html
+++ b/index.html
@@ -36,5 +36,19 @@
             </div>
         </section>
         <!-- Navbar Section Ends Here -->
+
+          <!-- fOOD search Section Starts Here -->
+    <section class="food-search text-center">
+        <div class="container">
+            
+            <form action="food-search.html" method="POST">
+                <input type="search" name="search" placeholder="Search for Food.." required>
+                <input type="submit" name="submit" value="Search" class="btn btn-primary">
+            </form>
+
+        </div>
+    </section>
+    <!-- fOOD search Section Ends Here -->
+
 </body>
 </html>
