Add footer section

--- a/index.html
+++ b/index.html
@@ -214,6 +214,13 @@
     </section>
     <!-- social Section Ends Here -->
 
+      <!-- footer Section Starts Here -->
+      <section class="footer">
+        <div class="container text-center">
+            <p>All rights reserved. Designed By <a href="https://satyasaadhika.github.io/">Priyanshu Maurya</a></p>
+        </div>
+    </section>
+    <!-- footer Section Ends Here -->
 
 </body>
 </html>
