--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </section>
         <!-- Navbar Section Ends Here -->
 
-          <!-- fOOD search Section Starts Here -->
+          <!-- food search Section Starts Here -->
     <section class="food-search text-center">
         <div class="container">
             
@@ -49,7 +49,7 @@
 
         </div>
     </section>
-    <!-- fOOD search Section Ends Here -->
+    <!-- food search Section Ends Here -->
 
      <!-- Categories Section Starts Here -->
      <section class="categories">
@@ -79,7 +79,7 @@
     </section>
     <!-- Categories Section Ends Here -->
     
-      <!-- fOOD Menu Section Starts Here -->
+      <!-- food Menu Section Starts Here -->
       <section class="food-menu">
         <div class="container">
             <h2 class="text-center">Food Menu</h2>
@@ -195,7 +195,7 @@
             <a href="#">See All Foods</a>
         </p>
     </section>
-    <!-- fOOD Menu Section Ends Here -->
+    <!-- food Menu Section Ends Here -->
 
     <!-- social Section Starts Here -->
     <section class="social">
